--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.8.1",
-    "axios": "^1.3.4",
+    "axios": "^1.12.2",
     "date-fns": "^2.29.3",
     "firebase": "^9.17.2",
-    "react-firebase-hooks": "^5.1.1"
+    "leaflet": "^1.9.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "5.0.1"
   },
   "browserslist": {
     "production": [
